Updated website with new papers and CV

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
           <div class="col-lg-10 mx-auto text-left">
             <p>
                <ul>
+                <li>Catherine M. Baker*, Lauren R. Milne*, Richard E. Ladner. 2019. <i>Understanding the Impact of TVIs on Technology Use and Selection by Children with Visual Impairments.</i> In Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI ’19). ACM, New York, NY, USA. <a href = "files/TVIs.pdf">(PDF)</a> (* co-first authors) </li>
                 <li>Lauren R. Milne, and Richard E. Ladner. 2018. <i>Blocks4All: Overcoming Accessibility Barriers to Blocks Programming for Children with Visual Impairments.</i> In Proceedings of the ACM Conference on human factors in computing systems (CHI ‘18). ACM, New York, NY, USA. <a href = "files/Blocks4All.pdf">(PDF)</a></li>
                 <li>Annuska Zolyomi, Anne Ross, Arpita Bhattacharya, Lauren R. Milne and Sean Munson.  2018. <i>Values, Identity, and Social Translucence: Neurodiverse Student Teams in Higher Education.</i> In Proceedings of the ACM Conference on human factors in computing systems (CHI ‘18). ACM, New York, NY, USA. <a href = "files/Neurodiverse.pdf">(PDF)</a></li>
                 
@@ -155,6 +156,7 @@
 						 
               <h2 class="text-center">Conference Posters (with Short Papers)</h2>
 				<ul>
+                    <li>Lauren R. Milne, Richard E. Lander. 2019. <i>Blocks4All: Making Blocks-Based Programming Languages Accessible for Children with Visual Impairments.</i>  In Proceedings of the 50th ACM technical symposium on Computer Science Education (SIGCSE '19). ACM, New York, NY, USA. </li>
                       <li>Lauren R. Milne, Catherine M. Baker, Richard E. Ladner. 2017. <i>Blocks4All Demonstration: a Blocks-Based Programming Environment for Blind Children.</i> In Proceedings of the 19th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '17). ACM, New York, NY, USA. </li>
                       <li>Annuska Zolyomi, Anne Ross, Arpita Bhattacharya, Lauren R. Milne and Sean Munson. 2017. <i>Value Sensitive Design for Neurodiverse Teams in Higher Education.</i> In Proceedings of the 19th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '17). ACM, New York, NY, USA. </li>
                       <li>Lauren R. Milne. 2017. <i>Blocks4All: Making Block Programming Languages Accessible for Blind Children.</i> SIGACCESS Access. Comput. 117 (February 2017), 26-29. </li>
@@ -174,7 +176,7 @@
         <div class="container">
           <div class="row">
             <div class="footer-col col-md-12">
-              <p>Last Updated September 2018. Based on the Freelance theme by
+              <p>Last Updated June 2019. Based on the Freelance theme by
                 <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
             </div>
           </div>
@@ -217,9 +219,23 @@
                   <p class="text-left">Blocks-based programming environments are a popular tool to teach children to program, but they rely heavily on visual metaphors and are therefore not fully accessible for children with visual impairments. We evaluated existing blocks-based environments and identified four major accessibility barriers for visually impaired users. We explored techniques to overcome these barriers and built a fully accessible blocks-based environment on an iPad that uses audio and spatial cues to help blind children learn to program.
 </p>
                   <ul class="list-inline item-details">
+                      <li>        
+                          <strong>
+                        <a href="https://stemforall2018.videohall.com/presentations/1078">Blocks4All Video</a>
+                      </strong></li>
                     <li>
                       <strong>
-                        <a href="https://dl.acm.org/citation.cfm?id=3051525">Blocks4All</a>
+                        <a href="https://dl.acm.org/citation.cfm?id=3173643">Blocks4All CHI Paper</a>
+                      </strong>
+                      </li>
+                   <li>
+                      <strong>
+                        <a href="https://github.com/milnel2/blocks4alliOS">Blocks4All GitHub Repository</a>
+                      </strong>
+                    </li>
+                   <li>
+                      <strong>
+                        <a href="https://testflight.apple.com/join/gCELyHYO ">Download a Beta Version of Blocks4All for your iPad</a>
                       </strong>
                     </li>
                   </ul>
