added meta data

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Lauren Milne is an assistant professor of Computer Science at Macalester College, who studies accessibility and human computer interaction.">
+    <meta name="author" content="Lauren Milne">
+      
 
     <title>Lauren R. Milne</title>
 
@@ -28,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Lauren R. Milne</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><h1>Lauren R. Milne</h1></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -55,7 +56,7 @@
         <div class="row">
           <div class="col-lg-3 ml-auto">
             <img class="img-fluid" src="img/lauren_photo.png" alt="A Beautiful Portrait of Lauren">
-            <h1 class="text-center">Contact</h1>
+            <h2 class="text-center">Contact</h2>
             <hr class="star-light">
               <p class="text-center">lmilne@macalester.edu</p>
               <p class="text-center">OLRI 225<br>
@@ -86,7 +87,7 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
-        <h1 class="text-center">Projects</h1>
+        <h2 class="text-center">Projects</h2>
         <hr class="star-primary">
         <div class="row">
         <div class="col-sm-3 portfolio-item">
@@ -135,7 +136,7 @@
           <!-- About Section -->
     <section class="success" id="about">
       <div class="container">
-        <h1 class="text-center">Publications</h1>
+        <h2 class="text-center">Publications</h2>
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-10 mx-auto text-left">
@@ -164,7 +165,6 @@
                       <li>Lauren R. Milne, Cynthia L. Bennett, and Richard E. Ladner. 2013. <i>VBGhost: a Braille-Based Educational Smartphone Game for Children.</i> In Proceedings of the 15th International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '13). ACM, New York, NY, USA, Article 75, 2 pages.
                       </li>
 				</ul> 
-              </p>
           </div>
         </div>
       </div>
@@ -301,7 +301,7 @@
                 <div class="modal-body">
                   <h1>StructJumper</h1>
                   <hr class="star-primary">
-                <iframe width="525" height="419" src="https://www.youtube.com/embed/D2yvrMtOqWc" frameborder="0" allowfullscreen></iframe>
+                <iframe width="525" height="419" src="https://www.youtube.com/embed/D2yvrMtOqWc" allowfullscreen></iframe>
                     <p class="text-left">When blind developers program, they can use Screen Readers such as NVDA to listen to their code, which sounds something like this:<br>
                         <audio controls> <source src="files/NVDAeclipse.wav" type="audio/wav">
 		  		          Your browser does not support the audio element.
