--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
           <div class="col-lg-10 mx-auto text-left">
             <p>
                <ul>
+                   <li>Abby Marsh, Lauren R. Milne. 2024. <i>I Don't Want to Sound Rude, but it's None of their Business: Exploring Security and Privacy Concerns Around Assistive Technology Use in Educational Settings.</i> Forthcoming in ACM Transactions on Accessible Computing. ACM, New York, NY, USA.</li>
                    <li>Joslenne Peña, Lauren R. Milne. 2024. Web Development + Accessibility. To be included in Teaching Accessible Computing. Edited by Amy Ko, Alannah Oleson, and Richard Ladner (Book Chapter). </li>
+                   <li>Earl Huff, Varsha Koushik, Richard E. Ladner, Stephanie Ludi, Lauren Milne, Aboubakar Mountapmbeme, Margaret Perkoff, Andreas Stefik. 2020. <i>White Paper: Accessible Tools and Curricula for K-12 Computer Science Education</i>White paper from the Accessible Computer Science Education Fall
+                    Workshop, sponsored by Microsoft, The Coleman Institute for Cognitive Disabilities, and UW CREATE. November 17-19, 2020.</li>
                    <li>Catherine M. Baker*, Lauren R. Milne*, Richard E. Ladner. 2019. <i>Understanding the Impact of TVIs on Technology Use and Selection by Children with Visual Impairments.</i> In Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI ’19). ACM, New York, NY, USA. <a href = "files/TVIs.pdf">(PDF)</a> (* co-first authors) </li>
                    <li>Lauren R. Milne, and Richard E. Ladner. 2018. <i>Blocks4All: Overcoming Accessibility Barriers to Blocks Programming for Children with Visual Impairments.</i> In Proceedings of the ACM Conference on human factors in computing systems (CHI ‘18). ACM, New York, NY, USA. <a href = "files/Blocks4All.pdf">(PDF)</a></li>
                    <li>Annuska Zolyomi, Anne Ross, Arpita Bhattacharya, Lauren R. Milne and Sean Munson.  2018. <i>Values, Identity, and Social Translucence: Neurodiverse Student Teams in Higher Education.</i> In Proceedings of the ACM Conference on human factors in computing systems (CHI ‘18). ACM, New York, NY, USA. <a href = "files/Neurodiverse.pdf">(PDF)</a></li>
@@ -157,7 +160,7 @@
 						 
               <h2 class="text-center">Conference Posters (with Short Papers)</h2>
 				<ul>
-                    <li>Adele Smolansky, Catherine M. Baker, Shiri Azenkot, Lauren R. Milne. 2024. Perspectives of Assistive Technology Industry Professionals on AT for Children. Late Breaking Work in Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI ’19). ACM, New York, NY, USA. </li>
+                    <li>Adele Smolansky, Catherine M. Baker, Shiri Azenkot, Lauren R. Milne. 2024. Perspectives of Assistive Technology Industry Professionals on AT for Children. Late Breaking Work in Proceedings of the ACM Conference on Human Factors in Computing Systems (CHI ’24). ACM, New York, NY, USA. </li>
                     <li>Jacqueline Shao Yi Ong**, Nana Adwoa O. Amoah**, Alison E. Garrett-Engele**, Mariella Irene Page**, Katherine R. McCarthy*, and Lauren R. Milne. 2019. Demo: Expanding Blocks4All with Variables and Functions. In Proceedings of the 21st International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '19). ACM, New York, NY, USA. (** Macalester Student) </li>
                     <li>Logan B. Caraco**, Sebastian Deibel**, Yufan Ma**, and Lauren R. Milne. 2019. Making the Blockly Library Accessible via Touchscreen. In Proceedings of the 21st International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS '19). ACM, New York, NY, USA. (** Macalester Student)</li>
                     <li>Lauren R. Milne, Richard E. Lander. 2019. Position Paper: Accessible Block-Based Programming: Why and How. In Proceedings of the IEEE 2019 Blocks and Beyond Workshop. IEEE Computer Society, USA.</li>
